--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
-    <title>React App</title>
+    <title>FoodiesDev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
